Smoothness and loading

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="locomotive-scroll.min.js"></script>
     <title>Sparktech</title>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
